# shopify-

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
docs/: architecture.md  research_report.md
outputs/: demo_walkthrough.md  sample_result.json
samples/: catalog.json  order_created.json  policies.md
src/shopify_ai_automation/: __init__.py  agents.py  ai.py  api.py  cli.py  evaluation.py  models.py  orchestrator.py  rag.py  shopify.py
tests/: test_ai.py  test_api_contract.py  test_orchestrator.py  test_rag.py  test_shopify.py
web/: app.js  index.html  styles.css
