[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shopify-ai-automation"
version = "0.1.0"
description = "Offline-first Shopify/eCommerce AI automation POC with agents and local RAG."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Antriksh-22" }]
dependencies = []

[project.optional-dependencies]
api = ["starlette>=0.46", "uvicorn[standard]>=0.30"]
dev = ["pytest>=8.0"]

[project.scripts]
shopify-ai-demo = "shopify_ai_automation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
